changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix stupid infinite loop.
Nicolas Weeger 2010-02-13

Track god-information knowledge.
Nicolas Weeger 2010-02-07

Extract describe_god() from god_info_msg(), use StringBuffer.
Nicolas Weeger 2010-02-07

Make artifact description more random (for items it can apply to),
correctly handle forbidden items.
Nicolas Weeger 2010-02-07

Fix artifact description to use item's name, not archetype name.
Nicolas Weeger 2010-02-07

Keep track of monster knowledge.
Nicolas Weeger 2010-02-07

Tweak knowledge functions, preparing for additional items.
Nicolas Weeger 2010-02-07

Remove support for lib/treasures file from lib/collect.pl.
Andreas Kirschbaum 2010-02-01

Remind player of spell consumption when casting.
Nicolas Weeger 2010-01-31

Extend alchemy to describe item combinations/transformations.
Nicolas Weeger 2010-01-31

Ensure formulae with 0 chance are never listed.
Nicolas Weeger 2010-01-31

Tighten up string checking for accounts, since they will get used for
filenames.  Add new checks for these new allowed characters.
Files: server/account.c test/unit/server/check_account.c
MSW 2010-01-21

Add 'spellmon 2' setup option, to send more spell information.
This includes if the spell needs arguments (another spell, ...)
and if the spell requires items to be cast.
Nicolas Weeger 2010-01-24

Enable spells to consume items to be cast.
Nicolas Weeger 2010-01-24

When talked to, NPCs now stay still a few ticks before moving - only if random movement.
Nicolas Weeger 2010-01-24

Give access to quest-related functions to the Python plugin.
Nicolas Weeger 2010-01-24
